--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<title>AirBnB clone</title>
 		<link rel="stylesheet" type="text/css" href="./styles/2-common.css">
