--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 	<head>
 		<title>AirBnB clone</title>
 		<link rel="stylesheet" type="text/css" href="./styles/2-common.css">
@@ -11,7 +11,7 @@
     		<header>
 		</header>
     		<footer>
-        		<p>Holberton school</p>
+        		<p>Best school</p>
     		</footer>
 
 	</body>
