--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
     <head>
         <link rel="stylesheet" type="text/css" href="./styles/3-header.css">
         <link rel="stylesheet" type="text/css" href="./styles/3-footer.css">
@@ -68,9 +68,8 @@
                         <b>Owner:</b> John Lennon
                     </div>
                     <div class="description">
-                        <p>This is a unique (2 room) apartment located in the heart of the Old Town, 2 mins from the Market Square. Its original interior design, mixing antique and modern elements in large space, will help you to experience Krakow's unforgettable
-                            charm
-                        </p>
+                        <p>Whether you're traveling for business or leisure, our rooms offer the perfect sanctuary to unwind and recharge. The seamless blend of style, comfort, and functionality ensures an unparalleled stay that leaves you refreshed and ready to take on the world.
+                     </p>
                     </div>
                 </article>
                 <article>
@@ -132,7 +131,7 @@
             </section>
         </div>
         <footer>
-            <p>Holberton School</p>
+            <p>Best School</p>
         </footer>
     </body>
 
