--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 	<head>
     		<title>AirBnB clone</title>
 	</head>
@@ -7,7 +7,7 @@
 		<header style="background-color: #FF0000; height: 70px; width: 100%">
 		</header>
 		<footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; left: 0;bottom: 0">
-			<p style="text-align: center; padding: 6px;">Holberton School</p>
+			<p style="text-align: center; padding: 6px;">Best School</p>
 		</footer>
 </body>
 </html>
