--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<htm>
 	<head>
 		<title>AirBnB clone</title>
 		<style>
@@ -32,7 +32,7 @@
     		<header>
 		</header>
     		<footer>
-        		<p>Holberton school</p>
+        		<p>Best school</p>
     		</footer>
 
 	</body>
