--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 	<head>
     		<link rel="stylesheet" type="text/css" href="./styles/3-common.css">
     		<link rel="stylesheet" type="text/css" href="./styles/3-header.css">
@@ -12,7 +12,7 @@
         		<a href="" class="logo"></a>
     		</header>
     	<footer>
-        	<p>Holberton school</p>
+        	<p>Best School</p>
     	</footer>
 	</body>
 </html>
