--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 	<head>
     		<link rel="stylesheet" type="text/css" href="./styles/4-common.css">
     		<link rel="stylesheet" type="text/css" href="./styles/3-header.css">
@@ -27,7 +27,7 @@
         		</section>
     		</div>
     		<footer>
-	    		<p>Holberton school</p>
+	    		<p>Best School</p>
     		</footer>
 	</body>
 </html>
