--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 <head>
     <link rel="stylesheet" type="text/css" href="./styles/3-header.css">
     <link rel="stylesheet" type="text/css" href="./styles/3-footer.css">
@@ -60,7 +60,7 @@
         </section>
     </div>
     <footer>
-        <p>Holberton school</p>
+        <p>Best School</p>
     </footer>
 </body>
 </html>
